added karnival2, mutz kcon

--- a/karnival.html
+++ b/karnival.html
@@ -269,82 +269,29 @@
 
 <!--put components here -->
 <div class="col-md-12 col-xs-12">
-  <ul class="long-line col-md-12 col-xs-12 paddingReset clearfix">
-    <div class="longer-line col-md-12 col-xs-12 clearfix"></div>
-    <div class="col-md-2 col-xs-6">
-      <div class="node" id="intro">
-        <i class="fa fa-info hospi_icon"></i>
-        <h4 class="btmText left15">INTRODUCTION</h4>
-    </div>
+<div class="outerCircle">
+  <div class="innerCircle">
   </div>
-  <div class="col-md-2 col-xs-6">
-      <div class="node" id="instr">
-        <i class="fa fa-file hospi_icon"></i>
-        <h4 class="btmText left15">INSTRUCTIONS</h4>
-    </div>
-  </div>
-  <div class="col-md-2 col-xs-6">
-      <div class="node" id="accom">
-        <i class="fa fa-suitcase hospi_icon"></i>
-        <h4 class="btmText left15">ACCOMODATION</h4>
-    </div>
-  </div>
-  <div class="col-md-2 col-xs-6">
-      <div class="node" id="reachceg">
-        <i class="fa fa-map-marker hospi_icon"></i>
-        <h4 class="btmText">REACHING CEG</h4>
-    </div>
-  </div>
-  <div class="col-md-2 col-xs-6">
-      <div class="node" id="faq">
-        <i class="fa fa-question hospi_icon"></i>
-        <h4 class="btmText">FAQ</h4>
-    </div>
-  </div>
-  <div class="col-md-2 col-xs-6">
-      <div class="node" id="contact">
-        <i class="fa fa-mobile hospi_icon"></i>
-        <h4 class="btmText">CONTACT</h4>
-    </div>
-  </div>
-  </ul>
-</div>
+  <div class="smallCircle">
 
-<!--hospi_content -->
-<div class="col-md-10 col-md-push-1 col-xs-12">
-  <div class="hospi_content">
-    <div class="header">
-      <!--insert pic here -->
-      
-    </div>
-    <h3 class="text-center title">INTRODUCTION</h3>
-    <div class="hospi_desc">
-      <p>Random lorem ipsum Random lorem ipsum Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-        Random lorem ipsum Random lorem ipsum
-      </p>
-      <p>Random lorem ipsum Random lorem ipsum Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-        Random lorem ipsum Random lorem ipsum
-      </p>
-      <p>Random lorem ipsum Random lorem ipsum Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-        Random lorem ipsum Random lorem ipsum
-      </p>
-    </div>
   </div>
+  <div class="smallCircle" style="margin-left:230px">
+
+  </div>
+  <div class="smallCircle" style="margin-left:440px; margin-top:-300px">
+
+  </div>
+  <div class="smallCircle" style="margin-left:230px; margin-top:-450px">
+
+  </div>
+  <div class="smallCircle" style="margin-left:15px; margin-top:-10px">
+
+  </div>
+  <div class="smallCircle" style="margin-left:435px; margin-top:-150px">
+
+  </div>
+</div>
+</div>
 
 </div>
 
