--- a/karnival2.html
+++ b/karnival2.html
@@ -15,8 +15,10 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery-ui.min.js"></script>
 
-<!--navbar-->
+<style>
 
+</style>
+<!--navbar-->
 <div class="col-md-12 headerBox hidden-xs hidden-sm">
 <div class="col-md-4 ">
 <img src="images/ceg_desc.png" class="headerPics" id="ceg"/>
@@ -268,83 +270,123 @@
 </div>
 
 <!--put components here -->
-<div class="col-md-12 col-xs-12">
-  <ul class="long-line col-md-12 col-xs-12 paddingReset clearfix">
-    <div class="longer-line col-md-12 col-xs-12 clearfix"></div>
-    <div class="col-md-2 col-xs-6">
-      <div class="node" id="intro">
-        <i class="fa fa-info hospi_icon"></i>
-        <h4 class="btmText left15">INTRODUCTION</h4>
+<div class="col-md-12 col-xs-12 col-md-push-1">
+<ul class="karCircles col-md-12 col-xs-12 clearfix paddingReset">
+  <li class="karCircle col-md-4 col-xs-12"><!--karCircle will contain the image -->
+    <div class="karInnerCircle"><!--animated border-->
+        <img src="images/patterns/congruent_pentagon.png" /><!--vid clip that plays on hover -->
+        <div class="overlay">
+          <i class="fa fa-play hidden-lg hidden-md"></i>
+        </div>
+      <!--   <div class="karTooltip">
+          <p><i class="fa fa-umbrella"></i> KARNIVAL NAME</p>
+          <p><i class="fa fa-map-marker"></i> LOCATION</p>
+          <p><i class="fa fa-clock"></i> 10 am</p>
+        </div> -->
     </div>
-  </div>
-  <div class="col-md-2 col-xs-6">
-      <div class="node" id="instr">
-        <i class="fa fa-file hospi_icon"></i>
-        <h4 class="btmText left15">INSTRUCTIONS</h4>
+
+  </li>
+<li class="karCircle col-md-4 col-xs-12"><!--karCircle will contain the image -->
+    <div class="karInnerCircle"><!--animated border-->
+        <img src="images/patterns/congruent_pentagon.png" /><!--vid clip that plays on hover -->
+        <div class="overlay">
+          <i class="fa fa-play hidden-lg hidden-md"></i>
+        </div>
+       <!--  <div class="karTooltip">
+          <p><i class="fa fa-umbrella"></i> KARNIVAL NAME</p>
+          <p><i class="fa fa-map-marker"></i> LOCATION</p>
+          <p><i class="fa fa-clock"></i> 10 am</p>
+        </div> -->
     </div>
-  </div>
-  <div class="col-md-2 col-xs-6">
-      <div class="node" id="accom">
-        <i class="fa fa-suitcase hospi_icon"></i>
-        <h4 class="btmText left15">ACCOMODATION</h4>
+
+  </li>
+<li class="karCircle col-md-4 col-xs-12"><!--karCircle will contain the image -->
+    <div class="karInnerCircle"><!--animated border-->
+        <img src="images/patterns/congruent_pentagon.png" /><!--vid clip that plays on hover -->
+        <div class="overlay">
+          <i class="fa fa-play hidden-lg hidden-md"></i>
+        </div>
+       <!--  <div class="karTooltip">
+          <p><i class="fa fa-umbrella"></i> KARNIVAL NAME</p>
+          <p><i class="fa fa-map-marker"></i> LOCATION</p>
+          <p><i class="fa fa-clock"></i> 10 am</p>
+        </div> -->
     </div>
-  </div>
-  <div class="col-md-2 col-xs-6">
-      <div class="node" id="reachceg">
-        <i class="fa fa-map-marker hospi_icon"></i>
-        <h4 class="btmText">REACHING CEG</h4>
+
+  </li>
+<li class="karCircle col-md-4 col-xs-12"><!--karCircle will contain the image -->
+    <div class="karInnerCircle"><!--animated border-->
+        <img src="images/patterns/congruent_pentagon.png" /><!--vid clip that plays on hover -->
+        <div class="overlay">
+          <i class="fa fa-play hidden-lg hidden-md"></i>
+        </div>
+       <!--  <div class="karTooltip">
+          <p><i class="fa fa-umbrella"></i> KARNIVAL NAME</p>
+          <p><i class="fa fa-map-marker"></i> LOCATION</p>
+          <p><i class="fa fa-clock"></i> 10 am</p>
+        </div> -->
     </div>
-  </div>
-  <div class="col-md-2 col-xs-6">
-      <div class="node" id="faq">
-        <i class="fa fa-question hospi_icon"></i>
-        <h4 class="btmText">FAQ</h4>
+
+  </li>
+<li class="karCircle col-md-4 col-xs-12"><!--karCircle will contain the image -->
+    <div class="karInnerCircle"><!--animated border-->
+        <img src="images/patterns/congruent_pentagon.png" /><!--vid clip that plays on hover -->
+        <div class="overlay">
+          <i class="fa fa-play hidden-lg hidden-md"></i>
+        </div>
+       <!--  <div class="karTooltip">
+          <p><i class="fa fa-umbrella"></i> KARNIVAL NAME</p>
+          <p><i class="fa fa-map-marker"></i> LOCATION</p>
+          <p><i class="fa fa-clock"></i> 10 am</p>
+        </div> -->
     </div>
-  </div>
-  <div class="col-md-2 col-xs-6">
-      <div class="node" id="contact">
-        <i class="fa fa-mobile hospi_icon"></i>
-        <h4 class="btmText">CONTACT</h4>
+
+  </li>
+<li class="karCircle col-md-4 col-xs-12"><!--karCircle will contain the image -->
+    <div class="karInnerCircle"><!--animated border-->
+        <img src="images/patterns/congruent_pentagon.png" /><!--vid clip that plays on hover -->
+        <div class="overlay">
+          <i class="fa fa-play hidden-lg hidden-md"></i>
+        </div>
+       <!--  <div class="karTooltip">
+          <p><i class="fa fa-umbrella"></i> KARNIVAL NAME</p>
+          <p><i class="fa fa-map-marker"></i> LOCATION</p>
+          <p><i class="fa fa-clock"></i> 10 am</p>
+        </div> -->
     </div>
-  </div>
-  </ul>
+
+  </li>
+
+</ul>
+
+
 </div>
 
-<!--hospi_content -->
-<div class="col-md-10 col-md-push-1 col-xs-12">
-  <div class="hospi_content">
-    <div class="header">
-      <!--insert pic here -->
-      
+<div class="col-md-6 col-md-push-2 col-xs-12 karBox">
+  <div class="bottomPage hidden-xs"></div>
+  <div class="topPage">
+    <i class="fa fa-times closeme fa-2x"></i>
+    <div class="karImCircle">
+      <img src="images/patterns/congruent_pentagon.png" />
     </div>
-    <h3 class="text-center title">INTRODUCTION</h3>
-    <div class="hospi_desc">
-      <p>Random lorem ipsum Random lorem ipsum Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-        Random lorem ipsum Random lorem ipsum
-      </p>
-      <p>Random lorem ipsum Random lorem ipsum Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-        Random lorem ipsum Random lorem ipsum
-      </p>
-      <p>Random lorem ipsum Random lorem ipsum Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-          Random lorem ipsum Random lorem ipsum
-        Random lorem ipsum Random lorem ipsum
-      </p>
-    </div>
+    <div class="karDetails">
+    <h5 class="karName text-center">ARJUN TANK DEMONSTRATION</h5>
+    <h5 class="karVenue text-center">CENTER FIELD</h5>
+    <h5 class="text-center"><span class="karDate">29th August, 2016</span>
+        <span class="karTime">10:00 am </span>
+     </h5>
+   </div>
+    <p>  Experience fun at a whole new level with our action packed game Lasertag! This is an adrenaline-pumping, heart-pounding game in which strategy and luck are joined to defeat your opponents.
+
+           Lasertag is similar to the classic and still well-loved PC games wherein you strategize with your team on how to defeat your opponent. The team missions also require team strategy but on a live battlefield arena. It is the cooler, painless and high-technology version of paint ball games.
+
+           Lasertag is a team or individual activity that involves the use of hand-held infrared-emitting targeting device.First-time players do not need to worry as our professionals will guide you on how you can make laser tag an exciting and fun-filled activity with your friends.
+
+Participants can register for this event on the spot!
+</p>
   </div>
+</div>
+
 
 </div>
 
@@ -358,41 +400,85 @@
 
 <script>
 $(document).ready(function(){
+setClose = 0;
 
 $(".navbar-toggle").click(function(){
   closeall();
+});
+
+
+$(".karCircle").click(function(){
+
+if( $(window).width() >= 600)
+{
+    popOut();
+    setTimeout(function(){  
+      moveKarsUp();},200*6);
+    $("html,body").animate({'scrollTop':"20px"},300);
+    setClose = 1;
+}
+//mobile effects
+else
+{
+    mpopOut();
+    setTimeout(function(){
+      moveKarsUp();},200*6);
+
+  $("html,body").animate({'scrollTop':"20px"},300);
+    setClose = 1; 
+}
+  });
+
+$(".closeme").click(function(){
+  moveKarsDown();
+  popIn();
   
 });
 
-$(".node").click(function(){
+  var anims = ['flyLeft','flyBottom','flyRight','flyTop'];
+  var index = 0;
+  function popOut(){
+  $(".karCircle").each(function(i){
+      var ele = $(this);
+      index = (index+1)%4;
+      var currentanim = anims[index];
+      setTimeout(function(){ $(ele).addClass(currentanim).fadeOut(200*i);},200*i);
+  });
+}
 
-//scroll down in mobile
-if($(window).width()>=320 && $(window).width()<=960)
-  $('html,body').animate({'scrollTop':"450px"},800);
-else
-  $('html,body').animate({'scrollTop':"200px"},800);
+//mobile popOut effects -- reduced
+  function mpopOut(){
+  $(".karCircle").each(function(i){
+      var ele = $(this);
+      setTimeout(function(){ $(ele).addClass("flyLeft").fadeOut(50*i);},200*i);
+  });
+}
+function popIn(){
 
-  $(".node").removeClass("node-active");
-  $(this).addClass("node-active");
-  $(".hospi_content").removeClass("hospi_animated");
+  $(".karCircle").each(function(i){
+      var ele = $(this);
+      setTimeout(function(){ $(ele).removeClass("flyLeft").removeClass("flyRight").removeClass("flyTop").removeClass("flyBottom").fadeIn(i*175);},200*i);
+  });
+}
 
-  var nodeid = $(this).attr("id");
-  if(nodeid == 'intro')
-  $(".longer-line").css({'background':"lime",'width':"8%"});
-  else if(nodeid == 'instr')
-  $(".longer-line").css({'background':"lime",'width':"25%"});
-  else if(nodeid == 'accom')
-  $(".longer-line").css({'background':"lime",'width':"40%"});
-  else if(nodeid == 'reachceg')
-  $(".longer-line").css({'background':"lime",'width':"59%"});
-  else if(nodeid == 'faq')
-  $(".longer-line").css({'background':"lime",'width':"75%"});
-  else if(nodeid == 'contact')
-  $(".longer-line").css({'background':"lime",'width':"100%"});
+function closeall(){
+    moveKarsDown();
+    popIn();  
+}
 
-$(".hospi_content").addClass("hospi_animated");
+function moveKarsUp(){
+  $(".karBox").addClass("floatUp");
+  $(".bottomPage").addClass("rotateUp");
+  $(".topPage").addClass("zoomIn");
+}
 
-});
+function moveKarsDown(){
+  $(".karBox").removeClass("floatUp");
+  $(".bottomPage").removeClass("rotateUp");
+  $(".topPage").removeClass("zoomIn");
+
+}
+
 
 });
 
